<resources>
    <string name="app_name">hao_de_xin</string>
    <string name="sdtname">姓名:</string>
    <string name="sdtsex">性别:</string>
    <string name="sdtnation">民族:</string>
    <string name="sdtbirthday">出生:</string>
    <string name="sdtaddress">住址:</string>
    <string name="sdtpidno">公民身份号码:</string>

    <string name="sdtgrantdept">发证机关:</string>
    <string name="sdtuserlife">有效期限:</string>
    <string name="sdtreadcard">读卡</string>
    <string name="sdtexit">退出</string>
    <string name="sdtstatus">状态:</string>
</resources>
